@startuml
'Esquema de login e autenticação da aplicação
'baseado nas roles relacionadas ao usuário

abstract class Usuario <<@MappedSuperClass>> {
    - id: Long
    - nomeUsuario: String
    - senha: String
    - email: String
    - roles: Set<Role>
}

class Role {
    - id: Long
    - nome: String
}

abstract class Pessoa {
    - nomeCompleto: String
    - cpf: String
    - rg: String
    - genero: String
    - dataNascimento: LocalDate
    - endereco: Endereco
    - telefoneCelular: String
    - telefoneFixo: String
    - estrangeiro: Boolean
}

class Instrutor {
    - especialidade: String
}

class Aluno {
    - matricula: String
}

Usuario "1" -- "1..*" Role
Usuario <|-- Pessoa
Pessoa <|-- Instrutor
Pessoa <|-- Aluno

@enduml